--- a/index.html
+++ b/index.html
@@ -11,24 +11,28 @@
 </head>
 <body>
         <div class='container'>
-                <button class="btn btn-danger" id='playButton'>Play</button>
-                <!-- Questions -->
+                <button class="btn btn-danger" id='playBtn'>Play</button>
+               
                 <div id=time></div>
-                <div id=presentQuestion></div>
+                <div id=questionNumber></div>
                 <div class='question'></div>
                 <div class='answers'></div>
-                <!-- Answers -->
-                <div id=answerMessage></div>
-                <div id=correctedAnswer></div>
-                <div id=gif></div>
-                <!--  Final Score -->
-                <div id=finalMessage></div>
+                
+                <div id=message></div>
+                <div id=rightAnswer></div>
+                <div id=finishedMessage></div>
                 <div id=correctAnswers></div>
-                <div id=wrongAnswers></div>
-                <div id=notAnswered></div>
+                <div id=incorrectAnswers></div>
+                <div id=unanswered></div>
                 <div id='restartBtn'></div>
+                <div id=image></div>
             </div>
 
+            <script
+            src="https://code.jquery.com/jquery-3.3.1.min.js"
+            integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
+            crossorigin="anonymous"></script>
     <script src="assets/javascript/app.js"></script>
+   
 </body>
 </html>
