--- a/index.html
+++ b/index.html
@@ -25,7 +25,9 @@
                 <div id=incorrectAnswers></div>
                 <div id=unanswered></div>
                 <div id='restartBtn'></div>
+                <div id=answerMessage></div>
                 <div id=image></div>
+                
                 
             </div>
 
